--- a/bookshop/package.json
+++ b/bookshop/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "bookshop",
+  "name": "@capire/bookshop",
   "version": "1.0.0",
-  "description": "A simple CAP project.",
-  "repository": "<Add your repository here>",
-  "license": "UNLICENSED",
-  "private": true,
-  "dependencies": {
-    "@sap/cds": "^7",
-    "express": "^4"
-  },
+  "description": "A simple self-contained bookshop service.",
+  "files": [
+    "app",
+    "srv",
+    "db",
+    "index.cds",
+    "index.js"
+  ],
   "devDependencies": {
-    "@cap-js/sqlite": "^1",
-    "@sap/eslint-plugin-cds": "^3",
-    "eslint": "^9"
+    "@cap-js/sqlite": "*"
+  },
+  "dependencies": {
+    "@sap/cds": ">=7",
+    "express": "^4.17.1"
   },
   "scripts": {
-    "start": "cds-serve"
-  },
-  "cds": { "requires": {
-  "db": {
-      "kind": "sqlite",
-      "credentials": { "url": "db.sqlite" } 
+    "genres": "cds serve test/genres.cds",
+    "start": "cds-serve",
+    "watch": "cds watch"
   }
-}}
 }
