--- a/frontend/reactWithUI5/package.json
+++ b/frontend/reactWithUI5/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@ui5/webcomponents": "^1.24.5",
     "@ui5/webcomponents-fiori": "^1.24.5",
     "@ui5/webcomponents-react": "^1.29.2",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^6.24.0",
